--- a/.github/workflows/image_checker.yml
+++ b/.github/workflows/image_checker.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install playwright PyGithub
+        pip install -r requirements.txt
         playwright install  # Install all browser engines
         playwright install-deps  # Install browser dependencies
 
