--- a/.github/workflows/image_checker.yml
+++ b/.github/workflows/image_checker.yml
@@ -9,12 +9,12 @@ jobs:
   check-images:
     runs-on: ubuntu-latest  # Can use Ubuntu as Playwright handles all browsers
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
